Revision history for Dist::Zilla::PluginBundle::MSCHOUT

{{$NEXT}}

0.18  2011-01-24
    - enable Git::CommitBuild, building releases on build/releases branch.
    - Git::Tag tags on build/releases branch now

0.17  2011-01-18
    - update to work with Dist::Zilla 4.x [(Auto)Prereq -> (Auto)Prereqs)]
    - require Dist::Zilla 4.102341

0.16  2010-05-03
    - add NextRelease back in - was missing since 0.13

0.15
    - add Git::CommitBuild plugin

0.14
    - if no_upload is true, remove ConfirmRelease

0.13  2010-04-14
    - simplify with Dist::Zilla::PluginBundle::Easy
    - require Dist::Zilla 2.101040

0.12  2010-04-09
    - add Pod::Weaver::Section::SourceGitHub, Pod::Weaver::Section::BugsRT
      to prereq's
    - use ArchiveRelease plugin
    - add BumpVersionFromGit plugin
    - use FakeRelease releaser
    - BumpVersionFromGit fix first_version

0.11  2010-03-29
    - turn off CPAN uploads, use ArchiveRelease releaser plugin

0.10  2010-03-29
    - initial release